deps: added Pytorch, nltk modules

--- a/src/NLP.ipynb
+++ b/src/NLP.ipynb
@@ -13,6 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ! pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu\n",
+    "# ! pip install nltk torch\n",
     "! echo \"Installing Deps\"\n",
     "! pip install -r requirements.txt\n",
     "! echo \"Installed Deps\"\n",
@@ -34,8 +36,11 @@
    "source": [
     "import nltk\n",
     "import json\n",
+    "import torch\n",
     "import numpy as np\n",
-    "from nltk.stem.porter import PorterStemmer"
+    "import torch.nn as NN # neural net\n",
+    "from nltk.stem.porter import PorterStemmer\n",
+    "from torch.utils.data import Dataset, DataLoader"
    ]
   },
   {
@@ -79,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,12 +103,12 @@
     "    bag   = [  0 ,    1,     0 ,   1  ,   0  ,    0   ,    0  ]\n",
     "\n",
     "    \"\"\"\n",
-    "    stemmed_tokenized_sentence = map(stem, tokenized_sentence)\n",
+    "    stemmed_tokenized_sentence = list(map(stem, tokenized_sentence))\n",
     "\n",
     "    bag = np.zeros(len(all_words), dtype=np.float32)\n",
     "    for i, word in enumerate(all_words):\n",
     "        if word in stemmed_tokenized_sentence:\n",
-    "                bag[i] = 1. \n",
+    "            bag[i] = 1.\n",
     "\n",
     "    return bag"
    ]
@@ -151,20 +156,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0. 0. 0. 0. 0. 0.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sentence = [\"hello\",\"how\", \"are\", \"you\"]\n",
-    "words = [\"hi\", \"hello\", \"I\", \"you\", \"bye\", \"thank\" \"cool\"]\n",
+    "words = [\"hi\", \"hello\", \"I\", \"you\", \"bye\", \"thank\", \"cool\"]\n",
     "print(bag_of_words(sentence, words))"
    ]
   },
